Initial beer training implemented
Added microbrewit module with function to fetch recipes from the
Microbrew.it api.

Added normalise module to normalise recipe properties to values between
0 and 1.

Added code in index.coffee to create training cases and to train the
neural network on the microbrew.it recipes. Added a test case.

Todo: Sample the Microbrew.it recipe collection and train only on the
sample. Use different sample as test cases to find success rate.

Todo: Add more properties to neural network training cases and
configure neural network structure.

--- a/config.coffee.example
+++ b/config.coffee.example
@@ -1,6 +1,9 @@
 exports.neuralNetwork =
   errorThresh: 0.005,  # error threshold to reach
-  iterations: 20000,   # maximum training iterations
+  iterations: 1000,   # maximum training iterations
   log: true,           # console.log() progress periodically
   logPeriod: 10,       # number of iterations between logging
   learningRate: 0.3    # learning rate
+
+exports.microbrewit =
+  apiUrl: 'http://brewsite.example'
