--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Microbrewit/beerbrain#readme",
   "dependencies": {
+    "bluebird": "^2.9.34",
     "brain": "^0.7.0",
     "http": "0.0.0",
     "lodash": "^3.10.1"
